# canoe

./: Cargo.toml  README.md  build.rs  shell.nix
.github/workflows/: actions.yml
src/: config.rs  main.rs  protocol.rs  rule.rs
src/binding/: action.rs  mod.rs  pointer.rs  xkb.rs
src/canoe/: context.rs  desktop.rs  font.rs  menu.rs  mod.rs  output.rs  render.rs  seat.rs  shadow.rs  shield.rs  shmfile.rs  titlebar.rs  window.rs
src/layout/: float.rs  grid.rs  mod.rs  monocle.rs  scroller.rs  tile.rs
src/rwm/: context.rs  desktop.rs  font.rs  menu.rs  mod.rs  output.rs  render.rs  seat.rs  shield.rs  titlebar.rs  window.rs
