[package]
name = "canoe"
version = "0.2.0"
edition = "2021"
description = "Canoe, a River window manager implementation in Rust"
license = "MIT"
repository = "https://github.com/roblillack/canoe"
homepage = "https://github.com/roblillack/canoe"

[dependencies]
# Wayland client bindings
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
wayland-backend = "0.3"
wayland-scanner = "0.31"
bitflags = "2"

# XKB for keyboard handling
xkbcommon = "0.8"

# Signal handling and system
nix = { version = "0.29", features = ["signal", "process", "poll", "fs"] }

# For titlebar shared memory buffers
memfd = "0.6"
memmap2 = "0.9"

# Font rendering for titlebars
freetype = "0.7"
resvg = "0.42"
yeslogic-fontconfig-sys = "6"

# Regex for window rules
regex = "1"

# Error handling
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
wayland-scanner = "0.31"

[dev-dependencies]
# For tests
tempfile = "3"

[[bin]]
name = "canoe"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
